--- a/style.css
+++ b/style.css
@@ -1,108 +1,87 @@
-@import url("//fonts.googleapis.com/css?family=Roboto:400,100");
-  
-  html {
-  font-size: 17px;
+.image {
+    background: url("http://www.weather.gov/images/twc/misc/fire3.jpg") no-repeat center fixed;
+    height: 100vh;
+    width: 100vh;
+    background-size: cover;
 }
-@media (max-width: 900px) {
-  html { font-size: 14px; }
+
+#display {
+    background-color: grey;
+    opacity: 0.7;
+    height: 80vh;
+    width: 90vh;
+    margin-top: 10%;
 }
-@media (max-width: 400px) {
-  html { font-size: 12px; }
+
+#title {
+    font-size: 4em;
+    opacity: 1.0;
+    font-family: Verdana;
 }
 
 body {
-  background-color:#05051D;
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
-  color: #fff;
+    font-family: Helvetica;
 }
 
-h1 {
-  font-size: 2em;
-  line-height: 0px;
-}
-h4 {
-    line-height: 0;
-    margin: 0 0 10px;
+.bold {
+    font-weight: bold;
 }
 
-.center  {
-  margin: 10px 0;
- }
-
-@media all and (min-width:300px) {
-  .center {
-    text-align: center;
-    position: absolute;
-    top: 30%;
-    right: 0;
-    left: 0;
-    -webkit-transform: translateY(-30%);
-    -moz-transform: translateY(-30%);
-    -ms-transform: translateY(-30%);
-    -o-transform: translateY(-30%);
-    transform: translateY(-30%);
-  }
+.info {
+    font-size: 2.5em;
 }
 
-.temperature {
-  font-size: 9rem;
-  font-weight: 100;
-  line-height: 1.00;
-  vertical-align: top;
- }
-
-.temperature:after {
-  content: '\B0 C';
-  font-size: 40px;
-  line-height: 1.4;
-  vertical-align: top;
-  margin-left: -6px;
-}
-.fahrSymb:after {
-  content: '\B0 F';
+.info2 {
+    font-size: 2em;
+    text-transform: uppercase;
 }
 
-.celSymb:after {
-  content: '\B0 C';
+.btn {
+    padding: 2%;
+    margin: 2%;
+    font-size: 1.5em;
 }
 
-.ChangeButton {
-  background: none;
-  border: none;
-  margin-top: 5px;
-  font-size: 18px;
-  color: #fff;
-}
-.cel {
-  border-right: 2px solid #fff;
-  cursor: pointer; cursor: hand;
-}
-.fahr {
-  cursor: pointer; cursor: hand;
-}
+/*#image {*/
+/*    background: url("http://www.weather.gov/images/twc/misc/fire3.jpg") no-repeat center fixed;*/
+/*    height: 100vh;*/
+/*    width: 100vh;*/
+/*    background-size: cover;*/
+/*}*/
 
-.footer {
-  background: rgba(16, 16, 39, 0.48);
-  color: #555;
-  font-size: 14px;
-  text-align: center;
-  height: 45px;
-  bottom: 0;
-  position: absolute;
-  width: 100%;
-  border-top: 2px solid #0B0B1F;
-}
+/*#display {*/
+/*    background-color: lightblue;*/
+/*    opacity: 0.7;*/
+/*    height: 80vh;*/
+/*    width: 90vh;*/
+/*    margin-top: 10%;*/
+/*}*/
 
-.icon-group {
-    padding-top: 10px;
-}
+/*#title {*/
+/*    font-size: 4em;*/
+/*    opacity: 1.0;*/
+/*    font-family: Verdana;*/
+/*}*/
 
-.icon-group a {
-    color: #555;
-}
+/*body {*/
+/*    font-family: Helvetica;*/
+/*}*/
 
-.icon-group a:hover {
-    color: #afbfcf;
-}
+/*.bold {*/
+/*    font-weight: bold;*/
+/*}*/
+
+/*.info {*/
+/*    font-size: 2.5em;*/
+/*}*/
+
+/*.info2 {*/
+/*    font-size: 2em;*/
+/*    text-transform: uppercase;*/
+/*}*/
+
+/*.btn {*/
+/*    padding: 2%;*/
+/*    margin: 2%;*/
+/*    font-size: 1.5em;*/
+/*}*/
